syntax = "proto3";

package trace;

import "google/protobuf/empty.proto";

service DataCenter {
    rpc Hello (HelloRequest) returns (HelloResponse) {
    }

    rpc Download (google.protobuf.Empty) returns (stream Packet) {
    }

    rpc Upload (stream Packet) returns (UploadResult) {
    }

}

message HelloRequest {
    string message = 1;
}

message HelloResponse {
    string message = 1;
}

message Packet {
    bytes data = 1;
}

message UploadResult {
    bytes checksum = 1;
    uint64 size = 2;
}
